ssl/ingressroute-hello-world-app.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hello-world-app
  namespace: default
spec:
  entryPoints:
    - websecure  # HTTPS should be configured 
  routes:
    - match: Host(`Hellow_World_App.com `)
      kind: Rule
      services:
        - name: hell-world-app
          port: 8080
      middlewares:
        - name: ip-whitelist
