ssl/ingressroute-tls.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hello-world-app
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`Hellow_World_App.com`)
      kind: Rule
      services:
        - name: hello-world-app
          port: 8080
  tls:
    certResolver: le  # Use Let's Encrypt certificate resolver
